--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 * {
-  color: #ffffff;
+  color: #000000;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 body {
-  background-color: #121213;
+  background-color: white;
 }
 
 .game-container {
