--- a/src/components/grid/GridCell.css
+++ b/src/components/grid/GridCell.css
@@ -1,10 +1,11 @@
 .grid-cell {
     width: 100%;
+    height: 100%;
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    font-size: 2rem;
-    line-height: 2rem;
+    font-size: 1.5rem;
+    line-height: 1.5rem;
     font-weight: bold;
     text-transform: uppercase;
     vertical-align: middle;
