--- a/src/components/grid/Grid.css
+++ b/src/components/grid/Grid.css
@@ -1,8 +1,11 @@
 .grid-container {
-  width: 350px;
-  height: 420px;
-  margin-bottom: 2px;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-gap: 5px;
+  padding:10px;
+  box-sizing: border-box;
+  width: 350px;
+  height: 420px;
+  margin-top: 8em;
+  margin-bottom: 8em;
 }
