--- a/src/components/grid/GridCell.css
+++ b/src/components/grid/GridCell.css
@@ -10,5 +10,5 @@
     text-transform: uppercase;
     vertical-align: middle;
     box-sizing: border-box;
-    border: 2px solid#3a3a3c;
+    border: 2px solid#d3d6da;
 }
