--- a/src/Wordle.css
+++ b/src/Wordle.css
@@ -1,6 +1,8 @@
 * {
   color: #000000;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 14px;
+  font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
+  /*font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;*/
 }
 
 body {
