--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -1,30 +1,25 @@
 .modal-container {
-  display: none;
+  display: flex;
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
   justify-content: center;
-  align-items: center;
-  z-index: 3000;
+  animation: SlideIn 100ms linear;
+  z-index: 2000;
+  background-color: white;
 }
 
 .modal-content-container {
   position: relative;
-  border-radius: 8px;
-  box-shadow: 0 4px 23px 0 rgba(0, 0, 0, 0.2);
-  width: 90%;
-  max-height: 90%;
-  overflow-y: auto;
-  animation: SlideIn 500ms;
+  padding: 0 32px;
   max-width: 500px;
-  padding: 16px;
-  box-sizing: border-box;
-  background-color: white;
+  width: 100%;
+  overflow-y: auto;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 @keyframes SlideIn {
@@ -38,16 +33,27 @@
   }
 }
 
-.modal-close {
+.modal-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.modal-header-title {
+  font-weight: 700;
+  font-size: 16px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.button-close {
   position: absolute;
-  top: 16px;
-  right: 16px;
-  width: 24px;
-  height: 24px;
+  right: 0;
   color: black;
-  font-weight: bold;
-  font-size: 15px;
-  background-color: white;
+  background: none;
   border: none;
   cursor: pointer;
 }
@@ -57,20 +63,46 @@
   flex-direction: column;
 }
 
-.modal-section-1 {
-  color: orange;
+.modal-content .p {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+}
+
+.modal-instructions {
+  padding: 0 16px 0;
+  display: block;
   margin-top: 2em;
   margin-bottom: 2em;
 }
 
-.modal-section-2 {
-  color: blue;
+.modal-examples {
+  border-top: 1px solid #d3d6da;
+  padding: 0 16px 0;
+  display: block;
   margin-top: 2em;
   margin-bottom: 2em;
 }
 
-.modal-section-3 {
-  color: green;
+.modal-example {
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+
+.modal-example-grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 5px;
+  box-sizing: border-box;
+  width: 100px;
+  height: auto;
+}
+
+.modal-footer {
+  border-top: 1px solid #d3d6da;
+  padding: 0 16px 0;
+  display: block;
   margin-top: 2em;
-  margin-bottom: 2em;
 }
