--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -6,9 +6,22 @@
   top: 0;
   left: 0;
   justify-content: center;
+  background-color: white;
   animation: SlideIn 100ms linear;
   z-index: 2000;
-  background-color: white;
+}
+
+.modal-container-small {
+  display: flex;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.5);
+  justify-content: center;
+  align-items: center;
+  z-index: 3000;
 }
 
 .modal-content-container {
@@ -20,6 +33,24 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  background-color: white;
+}
+
+.modal-content-container-small {
+  position: relative;
+  border-radius: 8px;
+  border: 1px solid #f6f7f8;
+  background-color: white;
+  color: black;
+  box-shadow: 0 4px 23px 0 rgb(0 0 0 / 20%);
+  box-sizing: border-box;
+  width: 90%;
+  max-height: 90%;
+  max-width: 500px;
+  overflow-y: auto;
+  animation: SlideIn 200ms;
+  padding: 16px;
+  display: block;
 }
 
 @keyframes SlideIn {
@@ -61,6 +92,17 @@
 .modal-content {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 16px 0;
+}
+
+.modal-content-statistics {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 16px 0;
 }
 
 .modal-content .p {
