--- a/src/components/keyboard/Key.css
+++ b/src/components/keyboard/Key.css
@@ -11,10 +11,13 @@
 }
 
 .keyboard-key:nth-child(11) {
-  margin-left: 28px;
+  margin-left: 27px;
 }
 
-.keyboard-key:nth-child(20),
+.keyboard-key:nth-child(27) {
+  width: 53px;
+}
+
 .keyboard-key:nth-child(28) {
-  width:60px;
+  width: 75px;
 }
